--- a/lab/lab1/решение квадратного уравнения/index.html
+++ b/lab/lab1/решение квадратного уравнения/index.html
@@ -5,7 +5,7 @@
 	<title>Test site</title>
 </head>
 <body>
-	<h1>Решение квадратного уравнения!!!!!!!<h1>
+	<h1>Решение квадратного уравнения.<h1>
 
 	<script type="text/javascript" src="script.js"></script> 
 </body>
