--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div id="particles-js"></div>
 
 <!-- scripts -->
-<script src="../particles.js"></script>
+<script src="../particles-json.js"></script>
 <script src="demo/js/app.js"></script>
 
 <!-- stats.js -->
