--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!-- count particles -->
 <ul class="btnWrap">
-  <li><a href="https://cherkasovMT202.github.io/lab/lab1/решение квадратного уравнения/">Решение квадратного уравнения на JS</a></li>
+  <li><a href="https://cherkasovmt202.github.io/lab/lab1/решение%20квадратного%20уравнения/">Решение квадратного уравнения на JS</a></li>
   <li><a href="https://cherkasovMT202.github.io/lab/lab2/">Часы с красивым текстом на JS</a></li>
   <li><a href="https://cherkasovMT202.github.io/lab/lab3/">Лабиринт на JS</a></li>
   <li><a href="https://cherkasovMT202.github.io/lab/lab4/">Google динозаврик с монетками на JS</a></li>
