--- a/lab/lab2/index.html
+++ b/lab/lab2/index.html
@@ -13,7 +13,7 @@
 <div class="button-container">
     <input type="button" onclick="clockStart()" value="Start">
     <input type="button" onclick="clockStop()" value="Stop">
-    <p class="text">Красивый текст на часах</p>
+    <p class="text">Самый красивый текст на часах</p>
 </div>
 
 <script>
