--- a/lab/lab4/index.html
+++ b/lab/lab4/index.html
@@ -20,7 +20,7 @@
          			text-align: center;
          			font-family;
          			color: #808080;
-         			: 'Open Sans', sans-serif;">ТоТ СаМыЙ ДиНоЗаВрИк Из ГуГлЕ! ТыКаЙ ПрОБеЛ И ИгРаЙ</h1>
+         			: 'Open Sans', sans-serif;">Press space to start</h1>
          <div class="niokbutton" onclick="okbuttonsend()"></div>
     </div>
     <div id="main-frame-error" class="interstitial-wrapper">
